src/objects/Asset_Acknowledgement_Tracker__c.object
<CustomObject>
    <fields>
        <fullName>Acknowledgement_Date__c</fullName>
        <label>Last Visited Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Data_Asset__c</fullName>
        <label>Data Asset</label>
        <referenceTo>RWE_Data_Asset__c</referenceTo>
        <relationshipLabel>Authorized User Tracker</relationshipLabel>
        <relationshipName>Authorized_User_Tracker</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Authorized_User_Tracker</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Authorized User Tracker</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Tracker ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Authorized User Tracker</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>